--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     
+    <div class="big_container">
+        <div class="left_sidebar">
+            <img class="logo" src="sunset.png" alt="Sunset Logo">
+            <div class="logo_text">Sunset</div>
+        </div>
+    </div>
+
 </body>
 </html>
