Fixed height of left sidebar by adding height: fit-content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up!</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://fav.farm/🌞" />
 </head>
 <body>
     
@@ -12,6 +13,9 @@
         <div class="left_sidebar">
             <img class="logo" src="sunset.png" alt="Sunset Logo">
             <div class="logo_text">Sunset</div>
+        </div>
+        <div class="right_panel">
+            <h1>Test</h1>
         </div>
     </div>
 
