Basic form input boxes completed, lacks styling and submit button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,48 @@
             <div class="logo_text">Sunset</div>
         </div>
         <div class="right_panel">
-            <h1>Test</h1>
+            <form action="" method="get">
+                <div class="intro_text">
+                    <p>
+                        This is not a real online service!
+                        You know you need something like this in your life
+                        to help you realize your deepest dreams.
+                        Sign up now to get started!
+                    </p>
+                    <br />
+                    <p>
+                        You <em>know</em> you want to.
+                    </p>
+                </div>
+                <div class="form_body">
+                    <p class="cta">Let's do this!</p>
+
+                    <div class="form_inputs">
+
+                        <div class="form_item">
+                            <label for="name">First Name</label>
+                            <input type="text" id="name" name="name" placeholder="John">
+                        </div>
+
+                        <div class="form_item">
+                            <label for="surname">Last Name</label>
+                            <input type="text" id="surname" name="surname" placeholder="Doe">
+                        </div>
+
+                        <div class="form_item">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" placeholder="johndoe@gmail.com">
+                        </div>
+
+                        <div class="form_item">
+                            <label for="phone">Phone number</label>
+                            <input type="tel" id="phone" name="phone" placeholder="12345678" maxlength="8">
+                        </div>
+
+                    </div>
+
+                </div>
+            </form>
         </div>
     </div>
 
