--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                             <input type="tel" id="phone" name="phone" placeholder="12345678" maxlength="8">
                         </div>
 
+                        <div class="form_item">
+                            <button type="submit">Sign me up!</button>
+                            <p>
+                                Already have an account? <a href="" class="existing_log_in">Log in</a>
+                            </p>
+                        </div>
+
                     </div>
 
                 </div>
