--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                             <input type="tel" id="phone" name="phone" placeholder="12345678" maxlength="8">
                         </div>
 
-                        <div class="form_item">
+                        <div class="form_item sign-up-section">
                             <button type="submit">Sign me up!</button>
-                            <p>
+                            <p class="already-account">
                                 Already have an account? <a href="" class="existing_log_in">Log in</a>
                             </p>
                         </div>
