Added password fields

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
                             <input type="tel" id="phone" name="phone" placeholder="12345678" maxlength="8">
                         </div>
 
+                        <div class="form_item">
+                            <label for="password">Password</label>
+                            <input type="password" id="password" name="password">
+                        </div>
+
+                        <div class="form_item">
+                            <label for="confirm_password">Confirm password</label>
+                            <input type="password" id="confirm_password" name="confirm_password">
+                        </div>
+
                         <div class="form_item sign-up-section">
                             <button type="submit">Sign me up!</button>
                             <p class="already-account">
