--- a/index.html
+++ b/index.html
@@ -77,5 +77,23 @@
         </div>
     </div>
 
+<script>
+    let password_var = document.getElementById("password");
+    let confirm_password_var = document.getElementById("confirm_password");
+
+    window.addEventListener("keydown", (event) => {
+        //console.log(password_var.value);
+        if (password_var.value != confirm_password_var.value) {
+            console.log("Applied")
+            confirm_password_var.classList.add("password_red");
+        }
+        else {
+            confirm_password_var.classList.remove("password_red");
+        }
+    })
+
+</script>
+
+
 </body>
 </html>
